feat(cli): separate collection and functional runners